--- a/src/components/Accordion.css
+++ b/src/components/Accordion.css
@@ -18,11 +18,11 @@
 
 .list:after {
     display: inline-block;
-    content: "";
     vertical-align: middle;
 }
 
 .icon-npay:after {
+    content: "";
     width: 38px;
     height: 15px;
     margin: -3px 0 1px;
@@ -33,7 +33,8 @@
 .menu-list .talktalk-icon:after {
     content: "\EAB2";
     font-size: 14px;
-    margin: 2px 0px 0px;
+    height: 14px;
+    top: -4px;
 }
 
 .label-new:after {
@@ -45,7 +46,7 @@
     background-color: #ff545c;
 }
 
-.list-10 i:after {
+.list-10 .icon-beta:after {
     position: relative;
     content: '';
     top: -3px;
