--- a/src/components/flex.css
+++ b/src/components/flex.css
@@ -22,6 +22,10 @@
   justify-content: center;
 }
 
+.flex-ju-start {
+  justify-content: start;
+}
+
 .flex-align-center {
   align-items: center;
 }
