--- a/src/pages/ProductRegister.scss
+++ b/src/pages/ProductRegister.scss
@@ -12,9 +12,10 @@
     .ProductRegister-layout-wrap {
         background-color: #EDF0F5;
 
+
+
         .error-active {
-            display: block;
-            margin-top: 8px;
+            display: inline-block;
             color: #ff3627;
             letter-spacing: -.2px;
         }
@@ -135,6 +136,7 @@
                             }
 
                             .apply-btn {
+                                display: block;
                                 width: 238px;
                                 height: 34px;
                                 color: #fff;
@@ -306,11 +308,13 @@
 
             .input-item-name {
                 width: 245px;
+                vertical-align: top;
                 .input-area {
                     width: 100%;
 
                     .input-box {
                         width: 100%;
+                        height: 100px;
                     }
                 }
             }
