--- a/src/components/admin/DetailImageProductRegi.scss
+++ b/src/components/admin/DetailImageProductRegi.scss
@@ -1,4 +1,40 @@
+@mixin centerFill($width, $direction: row) {
+    width: $width;
+    display: flex;
+    flex-direction: $direction;
+    align-items: center;
+    justify-content: center;
+}
+
+
 .DetailImageUploadBox {
+
+
+    input {
+        position: absolute;
+        display: none;
+        opacity: 0;
+    }
+
+
+    .drag_or_click {
+        background-color: #00c73c;
+        border-color: #00ae34;
+        border-radius: 3px;
+        padding: 10px 20px;
+        margin-top: 10px;
+
+
+        span {
+            color: #fff;
+        }
+
+        .inner {
+            padding: 30px;
+        }
+
+    }
+
     .text_box {
         display: flex;
         flex-direction: column;
@@ -11,53 +47,11 @@
             font-weight: 500;
         }
     }
-}
-
-
-@mixin centerFill($width, $direction: row) {
-    width: $width;
-    display: flex;
-    flex-direction: $direction;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.DetailImageUploadBox {
-    @include centerFill(800px, column);
-
-    >* {
-        width: 100%;
-        border-radius: 3px;
-    }
-
-    input {
-        position: absolute;
-        //   display: none;
-        opacity: 0;
-    }
-    .wrap {
-
-        .drag_or_click {
-            width: 100%;
-            height: 800px;
-            background-color: transparent;
-    
-            .inner {
-                padding: 30px;
-            }
-
-            &:hover {
-                // background-color: #c8c8c8;
-            }
-    }
-
-
-    }
 
     .preview_wrapper {
         position: relative;
-        height: 1000px;
+        width: 800px;
+        height: 800px;
         border: 1px solid #e2e2e2;
         overflow: scroll;
 
@@ -65,7 +59,6 @@
             width: 100%;
             display: flex;
             flex-direction: column;
-
 
             .ImagePreview {
 
@@ -88,9 +81,14 @@
                     height: 100%;
                 }
 
-                .icon_container {
+                input {
+                    // display: none;
+                    opacity: 0;
+                }
+
+                .icon_delete {
                     position: absolute;
-                    top: 0;
+                    bottom: 0;
                     right: 0;
                     width: 25px;
                     height: 25px;
@@ -109,6 +107,30 @@
                         background-position: 0px 0px;
                     }
                 }
+
+
+                .icon_add {
+                    position: absolute;
+                    bottom: 0;
+                    right: 30px;
+                    width: 25px;
+                    height: 25px;
+                    margin: 5px;
+                    border-radius: 50%;
+                    background-color: transparent;
+
+                    .icon-plus {
+                        position: absolute;
+                        display: inline-block;
+                        width: 25px;
+                        height: 25px;
+                        content: "";
+                        background: url(../../../public/img/plus1.svg) no-repeat;
+                        background-size: 25px;
+                        background-position: 0px 0px;
+                    }
+                }
+
             }
 
 
