--- a/src/components/shop/Swiper_Shop.scss
+++ b/src/components/shop/Swiper_Shop.scss
@@ -1,10 +1,12 @@
 
 
 .Swiper_Shop {
-    position: absolute;
+    margin-top: 50px;
+    width: 100%;
     top: 10px;
 
     .carousel_img {
+        width: 100%;
         height: auto;
     }
     
