--- a/src/pages/shop/Home.scss
+++ b/src/pages/shop/Home.scss
@@ -3,6 +3,7 @@
         width: 100%;
 
         .middle-inner {
+            min-width: 1280px;
             overflow: hidden;
             display: flex;
             justify-content: center;
