--- a/src/components/admin/TableProductList.scss
+++ b/src/components/admin/TableProductList.scss
@@ -3,7 +3,6 @@
   --ag-checkbox-checked-color: #00c73c;
   // --ag-checkbox-unchecked-color: #00ae34;
 
-
   .ag-checkbox {
 
     .ag-input-wrapper:focus-within {
@@ -20,148 +19,135 @@
     font-family: NanumGothic;
     font-size: 13px;
     border: 1px solid #d3d8e1;
-  
+
     .ag-cell {
-        color: #555;
+      color: #555;
     }
-    
-    .ag-row-selected:before { // 선택된 백그라운드 hover 컬러
-        background-image: none;
+
+    .ag-row-selected:before {
+      // 선택된 백그라운드 hover 컬러
+      background-image: none;
     }
-  
+
     .ag-selection-checkbox {
-        margin: 0px;
+      margin: 0px;
     }
-  
+
     .ag-checkbox-input-wrapper {
-        width: 20px;
-        height: 20px;
+      width: 20px;
+      height: 20px;
     }
-    
+
     .ag-checkbox-input-wrapper:focus-within {
-        box-shadow: none;
+      box-shadow: none;
     }
-    
+
     .ag-checkbox-input-wrapper::after {
-        content: "";
-        outline: none;
-        width: 20px;
-        height: 20px;
-        background: url(../../../public/img/sp_icon_pc.png) no-repeat;
-        background-position: -30px -530px;
+      content: "";
+      outline: none;
+      width: 20px;
+      height: 20px;
+      background: url(../../../public/img/sp_icon_pc.png) no-repeat;
+      background-position: -30px -530px;
     }
-  
-    .ag-checked:after{
-        content: "" !important;
-        width: 20px;
-        height: 20px;
-        background: url(../../../public/img/sp_icon_pc.png) no-repeat;
-        background-position: -0px -530px;
+
+    .ag-checked:after {
+      content: "" !important;
+      width: 20px;
+      height: 20px;
+      background: url(../../../public/img/sp_icon_pc.png) no-repeat;
+      background-position: -0px -530px;
     }
-  
-    .ag-checkbox-input {
-    }
+
+    .ag-checkbox-input {}
   }
-
-
-
 }
 
+.table-product-list {
+  font-size: 12px;
+  margin-bottom: 5px;
 
-.product-list {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  
-  .product-top {
-    font-size: 12px;
-    margin-bottom: 5px;
+  .unselectedErr {
+    color: red;
+    margin-left: 10px;
+  }
 
-    .unselectedErr {
+  .delete-agree {
+    position: absolute;
+    display: none;
+    padding: 20px;
+    border: 1px solid #dbdde2;
+    border-radius: 10px;
+    z-index: 5;
+    margin-top: 10px;
+    margin-left: 10px;
+    width: 300px;
+    height: 200px;
+    background-color: #fff;
+
+    .err {
       color: red;
-      margin-left: 10px;
-    }
-
-    .delete-agree {
-      position: absolute;
-      display: none;
-      padding: 20px;
-      border: 1px solid #dbdde2;
-      border-radius: 10px;
-      z-index: 5;
-      margin-top: 10px;
-      margin-left: 10px;
-      width: 300px;
-      height: 200px;
-      background-color: #fff;
-
-      .err {
-        color: red;
-        display: block;
-        margin-bottom: 10px;
-      }
-
-
-
-      .input {
-        outline: transparent;
-        width: 100%;
-        border: none;
-        font-size: 13px;
-        line-height: 34px;
-        color: #000;
-        letter-spacing: -.2px;
-      }
-
-      #input-inner {
-        position: relative;
-        padding: 1px 15px;
-        border: 1px solid rgba(0, 0, 0, 0.15);
-        margin-top: 10px;
-        margin-bottom: 10px;
-        margin-right: 8px;
-        background-color: #fff;
-      }
-
-      #input-inner:hover {
-        border: 1px solid rgb(117, 117, 117);
-      }
-  
-      #input-inner-active {
-        position: relative;
-        padding: 1px 15px;
-        border: 1px solid rgba(0,0,0,.15);
-        margin-top: 10px;
-        margin-bottom: 10px;
-        margin-right: 8px;
-        background-color: #fff;
-        border: 1px solid #03c75a;
-        z-index: 20;
-      }
-    }
-
-    .show {
       display: block;
+      margin-bottom: 10px;
+    }
+
+    .input {
+      outline: transparent;
+      width: 100%;
+      border: none;
+      font-size: 13px;
+      line-height: 34px;
+      color: #000;
+      letter-spacing: -.2px;
+    }
+
+    #input-inner {
+      position: relative;
+      padding: 1px 15px;
+      border: 1px solid rgba(0, 0, 0, 0.15);
+      margin-top: 10px;
+      margin-bottom: 10px;
+      margin-right: 8px;
+      background-color: #fff;
+    }
+
+    #input-inner:hover {
+      border: 1px solid rgb(117, 117, 117);
+    }
+
+    #input-inner-active {
+      position: relative;
+      padding: 1px 15px;
+      border: 1px solid rgba(0, 0, 0, .15);
+      margin-top: 10px;
+      margin-bottom: 10px;
+      margin-right: 8px;
+      background-color: #fff;
+      border: 1px solid #03c75a;
+      z-index: 20;
     }
   }
 
-  .delete-btn {
-    background-color: #fff;
-    border: 1px solid #dbdde2;
-    padding: 2px 10px;
+  .show {
+    display: block;
+  }
+}
 
-    span {
-      color: #666;
-      font-size: 12px;
-      line-height: 24px;
-    }
+.delete-btn {
+  background-color: #fff;
+  border: 1px solid #dbdde2;
+  padding: 2px 10px;
+
+  span {
+    color: #666;
+    font-size: 12px;
+    line-height: 24px;
   }
 }
 
 .editBtn {
   background-color: #fff;
   border: 1px solid #dbdde2;
-  
-  span {
-  }
+
+  span {}
 }
