--- a/src/scss/admin/_Home.scss
+++ b/src/scss/admin/_Home.scss
@@ -1,6 +1,6 @@
 .seller-content {
     width: 100%;
-    min-height: 2000px;
+    min-height: 800px;
     background-color: #edf0f5;
     display: block;
     padding: 0 0 0 210px;
@@ -57,7 +57,7 @@
     .panel-heading {
         height: 53px;
         padding: 0 25px;
-        border-bottom: 1px solid #e2e6ee;
+        // border-bottom: 1px solid #e2e6ee;
     }
 
     .panel-body {
