--- a/src/scss/font.scss
+++ b/src/scss/font.scss
@@ -3,6 +3,12 @@ body {
     font-weight: 300;
 }
 
+// TableProductList 컴포넌트 폰트
+.ag-root-wrapper {
+    font-family: GmarketSansMedium; 
+    font-weight: 300;
+}
+
 // G마켓 폰트
 
 @font-face {
