--- a/src/components/admin/TableProductList.scss
+++ b/src/components/admin/TableProductList.scss
@@ -1,5 +1,5 @@
 .ag-theme-alpine {
-  --ag-border-color: #dbdde2;
+  --ag-border-color: #ffffff;
   --ag-checkbox-checked-color: #00c73c;
   // --ag-checkbox-unchecked-color: #00ae34;
 
@@ -16,12 +16,13 @@
   }
 
   .ag-root-wrapper {
-    font-family: NanumGothic;
     font-size: 13px;
     border: 1px solid #d3d8e1;
+    border-radius: 8px;
 
     .ag-cell {
       color: #555;
+      display: flex;
     }
 
     .ag-row-selected:before {
@@ -145,9 +146,22 @@
   }
 }
 
-.editBtn {
-  background-color: #fff;
-  border: 1px solid #dbdde2;
+.right {
+  display: inline-block;
+}
 
-  span {}
+.editBtn {
+  margin-top: 2px;
+  height: 35px;
+  font-size: 12px;
+  color: white;
+  background-color: #e9e9e9;
+
+  border: none;
+  border-radius: 8px;
+  a {
+    display: inline-block;
+    color: #292929;
+    margin-bottom: 2px;
+  }
 }
