--- a/src/scss/admin/_Category.scss
+++ b/src/scss/admin/_Category.scss
@@ -1,19 +1,39 @@
     .home-category {
 
+        .box-name {
+            margin: 10px 0;
+            display: inline-block;
+        }
+
         .panel-body {
 
-            .first {
+            .box-wrap {
+                width: 100%;
+                padding: 20px;
+            }
+
+            .box {
+                // height: 500px;
+                padding: 40px 20px 20px 20px;
+                background-color: #EDF0F5;
+                border-radius: 10px;
+                margin: 10px;
+
                 .category-list {
-                    width: 250px;
-                    height: 400px;
-                    border: 1px solid #dbdde2;
-                    padding: 20px;
 
                     li {
                         padding: 10px;
                         font-size: 13px;
-                        background-color: #f0f0f0;
-                        border-bottom: 1px solid #dbdde2;
+                        padding: 15px;
+                        border-radius: 15px;
+                        background-color: white;
+
+                    }
+                    .sub-list {
+                        padding: 10px;
+                        border-radius: 10px;
+                        color: black;
+                        background-color: #EDF0F5;
                     }
 
                     .category-li-active {
@@ -22,13 +42,16 @@
                         border-color: 1px solid $mainColorBorder;
                     }
 
-                    li:hover {
+                    .category-li {
+                        border: 5px solid #EDF0F5;
+
+                    }
+
+                    .category-li:hover {
                         background-color: $mainColor;
                         user-select: none;
                         color: white;
                     }
-
-
                 }
 
                 .btn-list {
@@ -46,21 +69,30 @@
                         margin-left: -1px;
                         margin-right: 5px;
                     }
-
                 }
+            }
+
+
+            .first {
+                flex: 10%;
             }
 
             .second {
-                width: 400px;
-                border: 1px solid #dbdde2;
-                margin-left: 10px;
+                flex: 20%;
+                background-color: #EDF0F5;
+                border-radius: 10px;
                 padding: 20px;
-                transition: all 0.4s;
 
                 .second-product-list {
                     .top {
+
                     }
                 }
             }
+
+            .third {
+                flex: 50%;
+            }
+
         }
     }
