--- a/src/scss/color.scss
+++ b/src/scss/color.scss
@@ -13,10 +13,41 @@ $whiteBorderColor: #dbdde2;
 // $menuListColor: #445163;
 // $menuListInnerColor: #414958;
 
+// 메뉴 검색창
+// $menu-searchBG: #37404d;
+// $menu-searchBorder: #646d7b;
+// $menu-searchText: #cdced1;
+
 // 23-02-15 수정본
-$naviBGColor: #585858;
+$naviBGColor: #434344;
 $naviTextColor: rgb(216, 216, 216);
-$menuTopColor: #3f4b5c;
-$menuListColor: #445163;
-$menuListInnerColor: #414958;
+$menuTopColor: #2b2b2b;
+
+// 메뉴 리스트
+$menuListColor: #2b2b2b;
+$menuListInnerColor: #414141;
+$menu-List-Border: #505050;
+
+
+// 메뉴 검색창 셀렉터
+$menu-search-Selector-Text: #cdced1;
+$menu-search-Selector-Border: #505050;
+$menu-search-Selector-BG: #414141;
+
+// 메뉴 검색창 클릭시 드롭메뉴
+$menu-search-dropMenu-Text: #cdced1;
+$menu-search-dropMenu-Border: #505050;
+$menu-search-dropMenu-BG: #414141;
+
+// 드롭메뉴 리스트 마우스 올렸을때
+$menu-search-dropMenu-hover: #222222;
+
+// 메뉴 검색창 인풋
+$menu-search-Input-Text: #cdced1;
+$menu-search-Input-Border: #505050;
+$menu-search-Input-BG: #414141;
+
+// 메뉴 톡톡상담
+$menu-talkBtn-Border: #505050;
+$menu-talkBtn-BG: #414141;
 
