--- a/src/scss/flex.scss
+++ b/src/scss/flex.scss
@@ -6,6 +6,15 @@
   flex-wrap: wrap;
 }
 
+.flex-di-col {
+  flex-direction: column;
+}
+
+.flex-di-row {
+  flex-direction: column;
+}
+
+
 .flex-ju-sa {
   justify-content: space-around;
 }
@@ -33,6 +42,11 @@
 .flex-col-3{
   flex: 0 0 25%;
   max-width : 25%;
+}
+
+.flex-col-4{
+  flex: 0 0 33.3%;
+  max-width : 33.3%;
 }
 
 .flex-col-6{
