--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -54,9 +54,9 @@
     #input-inner-active {
         position: relative;
         padding: 1px 15px;
-        border-radius: 8px;
-        border: 1px solid rgba(0,0,0,.15);
+        // border: 1px solid rgba(0,0,0,.15);
         border: 1px solid #03c75a;
+        border-radius: 12px;
         z-index: 20;
     }
 }
@@ -99,6 +99,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
     width: 60px;
     height: 30px;
     border: none;
