--- a/src/components/admin/TableProductRegi.scss
+++ b/src/components/admin/TableProductRegi.scss
@@ -14,18 +14,20 @@
     border: none;
 }
 
-.delete-btn-wrap {
-    
     .delete-btn {
+        margin-left: 10px;
         height: 30px;
         vertical-align: middle;
         border: 1px solid #ffffff;
-        border-radius: 6px;
-        background-color: rgb(32, 132, 226);
-        color: #fff;
+        border-radius: 15px;
+        background-color: rgb(126, 126, 126);
         font-size: 13px;
+        span {
+            color: #fff;
+            font-size: 12px;
+            line-height: 24px;
+        }
     }
-}
 
 .menu-bottom {
 
@@ -67,6 +69,8 @@
                 width: 100px;
                 height: 30px;
                 border: 1px solid #dbdde2;
+                padding: 5px;
+                font-size: 15px;
             }
 
             .option-use {
@@ -145,7 +149,8 @@
                         .item {
                             display: inline-block;
                             padding: 3px 0px;
-                            font-weight: 400;
+                            font-size: 14px;
+                            font-weight: 500;
                         }
                         
                         .option {
@@ -163,14 +168,16 @@
             }
 
             .selected-modify-btn {
-                margin-left: 10px;
+                margin-left: 15px;
                 background-color: #8991a3;
                 border: 1px solid #727b90;
+                border-radius: 15px;
+                padding: 2px 10px;
+
                 span {
                     display: inline-block;
                     color: #fff;
                     font-size: 12px;
-
                 }
 
             }
