--- a/src/pages/adminPage/Category.scss
+++ b/src/pages/adminPage/Category.scss
@@ -55,6 +55,7 @@
         height: 60px;
         display: flex;
         align-items: center;
+        justify-content: space-between;
     }
 
     .adproduct-list {
