--- a/src/components/admin/TableProductRegi.scss
+++ b/src/components/admin/TableProductRegi.scss
@@ -3,7 +3,38 @@
     --ag-background-color: rgb(255, 255, 255);
     --ag-selected-row-background-color: rgb(224, 224, 224);
     font-family: 'Pretendard';
+}
 
+/* Scrollbar fix*/
+
+// .ag-body-viewport-wrapper.ag-layout-normal {
+// overflow-x: auto !important;
+// overflow-y: auto !important;
+// }
+
+.ag-aria-description-container {
+    display: none;
+}
+
+.ag-body-vertical-scroll-container {
+    height: auto !important;
+}
+
+.ag-body-viewport.ag-layout-normal {
+    width: 100% !important;
+    overflow-x: hidden !important;
+    overflow-y: auto !important;
+}
+
+.ag-body.ag-layout-normal {
+    overflow-x: auto !important;
+    overflow-y: auto !important;
+}
+
+.ag-center-cols-viewport {
+    width: 100%;
+    overflow-x: hidden;
+    height: auto;
 }
 
 .ag-theme-alpine .ag-header {
@@ -14,20 +45,30 @@
     border: none;
 }
 
-    .delete-btn {
-        margin-left: 10px;
-        height: 30px;
-        vertical-align: middle;
-        border: 1px solid #ffffff;
-        border-radius: 15px;
-        background-color: rgb(126, 126, 126);
-        font-size: 13px;
-        span {
-            color: #fff;
-            font-size: 12px;
-            line-height: 24px;
-        }
+// .ag-body-vertical-scroll-viewport {
+//     overflow-y: scroll;
+// }
+
+.ag-body-viewport.ag-layout-normal {
+    // overflow-y: auto;
+    // -webkit-overflow-scrolling: touch;
+}
+
+.delete-btn {
+    margin-left: 10px;
+    height: 30px;
+    vertical-align: middle;
+    border: 1px solid #ffffff;
+    border-radius: 15px;
+    background-color: rgb(126, 126, 126);
+    font-size: 13px;
+
+    span {
+        color: #fff;
+        font-size: 12px;
+        line-height: 24px;
     }
+}
 
 .menu-bottom {
 
@@ -48,7 +89,9 @@
 
         .menu-bottom-right {
 
-            .option-price, .option-stock, .option-use {
+            .option-price,
+            .option-stock,
+            .option-use {
                 display: flex;
                 align-items: center;
 
@@ -59,10 +102,11 @@
                 }
             }
 
-            .option-stock, .option-use {
+            .option-stock,
+            .option-use {
                 margin-left: 10px;
             }
-            
+
 
             .option-input {
                 color: #525252;
@@ -75,96 +119,96 @@
 
             .option-use {
 
-                        .selectize-control{
-                            position: relative;
-                            height: 30px;
-                        }
-                        
-                        .selectize-dropdown {
-                            position: absolute;
-                            display: none;
-                            width: 50px;
-                            z-index: 1000;
-                            color: #525252;
-                            background-color: #fff;
-                            border: 1px solid #DBDDE2;
-                            top: 35px;
-                            max-height: 201px;
-                            position: absolute;
-                            overflow-x: hidden;
-                            font-weight: 400;
-                        }
-                        
-                        .dropdown-active {
-                            display: block;
-                        }
-                        
-                        .selectize-dropdown-content{
-                            padding-bottom: 4px;
-                            flex-wrap: wrap;
-                            user-select: none;
+                .selectize-control {
+                    position: relative;
+                    height: 30px;
+                }
 
-                        }
-                        
-                        .selectize-input{
-                            color: #525252;
-                            background-color: #fff;
-                            border: 1px solid #DBDDE2;
-                            padding: 2px 30px 2px 10px;
-                            cursor: pointer;
-                            position: relative;
-                            user-select: none;
-                        }
-                        
-                        .selectize-input:after {
-                            content: " ";
-                            display: block;
-                            position: absolute;
-                            top: 50%;
-                            right: 10px;
-                            margin-top: -3px;
-                            width: 0;
-                            height: 0;
-                            border-style: solid;
-                            border-width: 5px 5px 0;
-                            border-color: #8d8d92 transparent transparent;
-                            clear: left;
-                        }
-                        
-                        .check:after {
-                            content: " ";
-                            display: block;
-                            position: absolute;
-                            top: 50%;
-                            right: 10px;
-                            margin-top: -4px;
-                            width: 0;
-                            height: 0;
-                            border-color: transparent transparent #767a83;
-                            border-style: solid;
-                            border-width: 0px 5px 5px;
-                            clear: left;
-                        }
-                        
-                        .item {
-                            display: inline-block;
-                            padding: 3px 0px;
-                            font-size: 14px;
-                            font-weight: 500;
-                        }
-                        
-                        .option {
-                            padding: 2px 10px;
-                            line-height: 24px;
-                        }
-                        
-                        .selected {
-                            /* color: #95b7e3; */
-                        }
-                        
-                        .active {
-                            color: #525252;
-                        }
+                .selectize-dropdown {
+                    position: absolute;
+                    display: none;
+                    width: 50px;
+                    z-index: 1000;
+                    color: #525252;
+                    background-color: #fff;
+                    border: 1px solid #DBDDE2;
+                    top: 35px;
+                    max-height: 201px;
+                    position: absolute;
+                    overflow-x: hidden;
+                    font-weight: 400;
+                }
+
+                .dropdown-active {
+                    display: block;
+                }
+
+                .selectize-dropdown-content {
+                    padding-bottom: 4px;
+                    flex-wrap: wrap;
+                    user-select: none;
+
+                }
+
+                .selectize-input {
+                    color: #525252;
+                    background-color: #fff;
+                    border: 1px solid #DBDDE2;
+                    padding: 2px 30px 2px 10px;
+                    cursor: pointer;
+                    position: relative;
+                    user-select: none;
+                }
+
+                .selectize-input:after {
+                    content: " ";
+                    display: block;
+                    position: absolute;
+                    top: 50%;
+                    right: 10px;
+                    margin-top: -3px;
+                    width: 0;
+                    height: 0;
+                    border-style: solid;
+                    border-width: 5px 5px 0;
+                    border-color: #8d8d92 transparent transparent;
+                    clear: left;
+                }
+
+                .check:after {
+                    content: " ";
+                    display: block;
+                    position: absolute;
+                    top: 50%;
+                    right: 10px;
+                    margin-top: -4px;
+                    width: 0;
+                    height: 0;
+                    border-color: transparent transparent #767a83;
+                    border-style: solid;
+                    border-width: 0px 5px 5px;
+                    clear: left;
+                }
+
+                .item {
+                    display: inline-block;
+                    padding: 3px 0px;
+                    font-size: 14px;
+                    font-weight: 500;
+                }
+
+                .option {
+                    padding: 2px 10px;
+                    line-height: 24px;
+                }
+
+                .selected {
+                    /* color: #95b7e3; */
+                }
+
+                .active {
+                    color: #525252;
+                }
             }
 
             .selected-modify-btn {
@@ -190,8 +234,9 @@
         .ag-cell {
             color: #555;
         }
-        
-        .ag-row-selected:before { // 선택된 백그라운드 hover 컬러
+
+        .ag-row-selected:before {
+            // 선택된 백그라운드 hover 컬러
             background-image: none;
         }
 
@@ -209,11 +254,11 @@
             width: 20px;
             height: 20px;
         }
-        
+
         .ag-checkbox-input-wrapper:focus-within {
             box-shadow: none;
         }
-        
+
         .ag-checkbox-input-wrapper:after {
             content: "";
             outline: none;
@@ -223,7 +268,7 @@
             background-position: -30px -530px;
         }
 
-        .ag-checked:after{
+        .ag-checked:after {
             content: "";
             width: 20px;
             height: 20px;
@@ -231,18 +276,18 @@
             background-position: -0px -530px;
         }
     }
-    
+
     .ag-header {
         border-bottom: 1px solid #d3d8e1;
 
         .ag-header-row {
-            
-            .ag-header-select-all{
+
+            .ag-header-select-all {
                 margin: 0px;
             }
 
             .ag-focus-managed:first-child {
-                
+
                 .ag-header-cell-comp-wrapper {
                     // display: none;
                 }
@@ -254,8 +299,8 @@
         }
 
 
-        
-        .ag-header-cell-label{
+
+        .ag-header-cell-label {
             justify-content: center;
 
             .ag-header-cell-text {
